--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@ body {
     font-family: 'Space Grotesk-light';
     letter-spacing: 1px;
 }
+a{
+  text-decoration: none;
+}
 .title{
   text-align: left !important;
 }
@@ -17,7 +20,24 @@ p{
     text-align: center;
 
 }
+.resume, .resume a{
+  border-radius: 2em;
+  text-align: center;
+  padding:0.2em;
+  border-top: 1px solid white;
+  border-bottom: 1px solid white;
+  text-decoration: none;
+  background-color: white;
+  color: white;
+  background-color:  rgba(29, 30, 37, 0.7);
+}
+.resume:hover{
+  cursor:pointer;
 
+  text-decoration: none;
+  color:#1d1e25;
+  background-color:  rgba(255, 255, 255, 0.6);
+}
 .linetype{
     font-size: 2em;
     font-family: 'Cinzel Decorative', cursive;
