--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ body {
   letter-spacing: 1px;
 }
 
+.container {
+  padding: 120px 300px 300px;
+}
+
 .title {
   text-align: left !important;
   margin-top: 40px;
@@ -22,25 +26,28 @@ p {
     text-align: justify;
 }
 
-#buttons .col-12{
-    text-align: center;
-
+.buttons-row {
+  display: flex;
+  flex-flow: row wrap;
+  align-content: center;
+  justify-content: space-around;
 }
 
-.resume, .resume a {
+#boton-cv, .boton-cv a {
   border-radius: 2em;
-  text-align: center;
+  background: transparent;
   border: 1px solid #b5b7c5;
-  text-decoration: none;
-  background-color: #b5b7c5;
   color: #b5b7c5;
-  background-color:  rgba(29, 30, 37, 0.7);
+  font-family: 'Lato';
+  font-size: 14px;
+  letter-spacing: 2px;
   padding: 8px 20px 8px;
   margin-top: 10px;
-  margin-bottom: 0px;
+  margin-right: 10px;
+  margin-bottom: 10px;
 }
 
-.resume:hover {
+#boton-cv:hover {
   cursor:pointer;
   text-decoration: none;
   color:#1d1e25;
@@ -107,7 +114,7 @@ p {
     padding: 8px 20px 8px;
     margin-top: 10px;
     margin-left: 10px;
-    margin-right: -13px;
+    margin-right: 10px;
     margin-bottom: 10px;
 }
 
