--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
   font-size: 20px;
   font-family: 'Space Grotesk-light';
   letter-spacing: 1px;
+  overflow: hidden;
   background: #0F2027;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #2C5364, #203A43, #0F2027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
@@ -102,11 +103,12 @@ a {
     margin-right: 10px;
     margin-bottom: 10px;  
 }
-
+#wave{
+  position: absolute;
+}
 #waves {
   z-index: -1;
-  position: absolute;
-  padding-top:70vh;
+  padding-top: 80vh;
 }
 
 ::-webkit-scrollbar {
