--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 
 body {
   color:white;
-  font-size: 20px;
-  font-family: 'Space Grotesk-light';
+  font-size: 18px;
+  font-family: 'Plus Jakarta Sans', sans-serif;
+  font-weight: 200;
   letter-spacing: 1px;
 
   background: #0F2027;  /* fallback for old browsers */
@@ -10,11 +11,27 @@ body {
   background: linear-gradient(to right, #2C5364, #203A43, #0F2027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
-.title {
-  text-align: left !important;
-  font-size: 1.6em;
-  font-family: 'Cinzel Decorative';
+.img {
+  width: 150px;
+  border-radius: 50%;
+  margin: 0px 0px 30px 0px;
 }
+
+.title {
+  text-align: center !important;
+  font-size: 35px;
+  font-weight: 500;
+  letter-spacing: 0.459375rem;
+  font-style: black;
+}
+
+.subtitle {
+  text-align: center;
+  font-size: 20px;
+  font-weight: 400;
+  letter-spacing: 0.459375rem;
+}
+
 a {
   text-decoration: none;
 }
@@ -24,13 +41,13 @@ p{
 button{
   border-radius: 2em;
   background: transparent;
-  border: 1px solid #D2D7DF;
-  color: #D2D7DF;
-  font-family: 'Lato';
-  font-size: 14px;
+  border: 1px solid white;
+  color: white;
+  font-size: 15px;
+  font-weight: 200;
   letter-spacing: 2px;
   padding: 8px 10px;
-  margin-top: 10px;
+  margin-top: 20px;
   margin-right: 10px;
   margin-bottom: 10px;
 }
@@ -39,7 +56,7 @@ button:hover {
   cursor:pointer;
   text-decoration: none;
   color:#353535;
-  background-color:  #D2D7DF;
+  background-color: white;
 }
 
 #wave{
