--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   font-size: 18px;
   font-family: 'Plus Jakarta Sans', sans-serif;
   font-weight: 200;
-  letter-spacing: 1px;
+  letter-spacing: 0.021875rem;
 
   background: #0F2027;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);  /* Chrome 10-25, Safari 5.1-6 */
@@ -45,7 +45,7 @@ button{
   color: white;
   font-size: 15px;
   font-weight: 200;
-  letter-spacing: 2px;
+  letter-spacing: 0.1rem;
   padding: 8px 10px;
   margin-top: 20px;
   margin-right: 10px;
