--- a/style.css
+++ b/style.css
@@ -1,53 +1,52 @@
 
 body {
-  color:white;
-  font-size: 18px;
   font-family: 'Plus Jakarta Sans', sans-serif;
-  font-weight: 200;
-  letter-spacing: 0.021875rem;
 
-  background: #0F2027;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #2C5364, #203A43, #0F2027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+background: #DAD299;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #B0DAB9, #DAD299);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #B0DAB9, #DAD299); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
 
 .img {
-  width: 150px;
+  width: 90px;
   border-radius: 50%;
   margin: 0px 0px 30px 0px;
 }
 
 .title {
   text-align: center !important;
-  font-size: 35px;
+  font-size: 32px;
   font-weight: 500;
-  letter-spacing: 0.459375rem;
-  font-style: black;
-}
-
-.subtitle {
-  text-align: center;
-  font-size: 20px;
-  font-weight: 400;
   letter-spacing: 0.459375rem;
 }
 
 a {
   text-decoration: none;
 }
-p{
-  text-align: justify;
+
+.description {
+  color: black;
+  font-size: 16px;
+  font-weight: 400;
+  letter-spacing: 0.021875rem;
+  margin: 0px 0px 30px 0px;
 }
-button{
+
+p {
+  margin: 15px 0px 15px 0px;  
+}
+
+button {
   border-radius: 2em;
   background: transparent;
-  border: 1px solid white;
-  color: white;
+  border: 1px solid black;
+  color: black;
   font-size: 15px;
-  font-weight: 200;
-  letter-spacing: 0.1rem;
+  font-weight: 400;
+  letter-spacing: 0.021875rem;
   padding: 8px 10px;
-  margin-top: 20px;
+  margin-top: 15px;
   margin-right: 10px;
   margin-bottom: 10px;
 }
@@ -55,30 +54,6 @@ button{
 button:hover {
   cursor:pointer;
   text-decoration: none;
-  color:#353535;
-  background-color: white;
-}
-
-#wave{
-  position: absolute;
-}
-#waves {
-  z-index: -1;
-  padding-top: 80vh;
-}
-
-::-webkit-scrollbar {
-  width: 8px;
-}
-
-::-webkit-scrollbar-track {
-  background: #2F2F31;
-}
-
-::-webkit-scrollbar-thumb {
-  background: #2F2F31;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background: #2F2F31;
+  color: whitesmoke;
+  background-color: black;
 }
